--- a/stilus.css
+++ b/stilus.css
@@ -1,3 +1,60 @@
-header img{
-    width: 500px;
+body{
+    font-family: Arial, sans-serif;
+    background-image: url('hatter.jpg');
+    box-sizing: border-box;
+
+}
+main{
+    width: 80%;
+    max-width: 1000px;
+    margin: auto;
+    color:white;
+    font-size: large;
+}
+header{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    border: 2px solid white;
+    background-color: rgb(53,53,143);
+}
+h1{
+    text-transform: uppercase;
+}
+nav{
+    border: 1px solid white;
+}
+a{
+    color: white;
+    border: 1px solid gray;
+    padding: 10px;
+    text-decoration: none;
+}
+a:hover{
+    color: red;
+}
+li{
+    list-style: none;
+}
+.flex-container{
+    display: flex;
+    justify-content: center;
+}
+section{
+    border: 1px solid white;
+}
+img{
+    width: 100%;
+    margin:auto;
+
+}
+h2{
+    display: flex;
+    justify-content: center;
+}
+article{
+    border: 1px solid white;
+}
+aside{
+    border: 1px solid white;
 }
